# BMP

./: .gitignore  API文档.md  BMP三智能体开发计划.md  Dashboard虚拟数据对接清单.md  README.md  WEB教练端后续任务计划.md  agent_transition_analysis.md  pom.xml  uniapp用户端真实数据接入分析.md  会长端开发进度优先级清单.md  安全漏洞修复方案.md  支付功能5分钟未支付自动取消实施计划.md  教练学员查看功能-实施计划.md  教练学员查看功能-测试计划.md  教练端开发半完成未完成清单.md  数据库设计文档.md  模块化测试文档.md  用户端Stitch风格分类表.md  用户端ui对比表.md  用户端开发进度清单表.md  项目分析总结.md  项目开发文档.md  项目结构分析.md  高优先级整改计划.md
.claude/: settings.json  settings.local.json
.codex/: config.toml
.codex/environments/: environment.toml
BMP-uniapp/: App.vue  CHANGELOG.md  README.md  Uniapp开发进度.md  env.d.ts  index.html  main.ts  manifest.json  package-lock.json  package.json  pages.json  tsconfig.json  type-check-errors.txt  uni.scss  verify-fix.ps1  vite.config.ts  会长端-建议新增优先级.md  会长端UI扫描整改清单.md  会长端详细进度表.md  开发进度分析-更新版.md  开发进度分析.md
BMP-uniapp/api/: agent.ts  auth.ts  booking.ts  coach.ts  coachSelf.ts  course.ts  court.ts  equipment.ts  map.ts  member.ts  notification.ts  recharge.ts  search.ts  stringing.ts  tournament.ts  venue.ts
BMP-uniapp/components/: LoadingAnimation.vue  MobileLayout.vue  Skeleton.vue  TabBar.vue  VirtualList.vue
BMP-uniapp/composables/: useCoachStudentRealtimeRefresh.ts  (+3 more)
bmp-agent/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
bmp-agent/alembic/: env.py
bmp-agent/alembic/versions/: 0001_agent_core_tables.py
bmp-agent/app/: __init__.py  main.py
bmp-agent/app/agents/: __init__.py  base.py  booking_agent.py  mock_agent.py
bmp-agent/app/agents/analytics/: __init__.py  analytics_agent.py
bmp-agent/app/agents/support/: __init__.py  prompts.py  support_agent.py
bmp-agent/app/api/: routes.py  schemas.py
bmp-agent/app/core/: __init__.py  config.py  exceptions.py  health.py  ratelimit.py  replay.py  security.py
bmp-agent/app/knowledge/: __init__.py  default_docs.py  retriever.py  store.py  versioning.py
bmp-agent/app/llm/: __init__.py  base.py  openai_adapter.py  schemas.py
bmp-agent/app/memory/: __init__.py  checkpoint.py  models.py  postgres.py  session.py
bmp-agent/app/observability/: __init__.py  logging.py  tracing.py
bmp-agent/app/tools/: __init__.py  analytics.py  base.py  booking.py  circuit_breaker.py  client.py  court.py  support.py  venue.py
bmp-agent/evals/analytics/: analytics_cases.jsonl
bmp-agent/evals/booking/: booking_cases.jsonl
bmp-agent/evals/support/: support_cases.jsonl
bmp-agent/tests/: conftest.py  test_agents.py  test_analytics_agent.py  test_analytics_eval.py  test_api.py  test_booking_agent.py  test_booking_eval.py  test_booking_tool.py  test_config.py  test_coverage_boost.py  test_health.py  test_llm.py  test_offline.py  test_session.py  test_support_agent.py  test_support_eval.py  test_tools.py  test_trace_audit.py
docs/: API接口规范文档.md  BMP三智能体优先级实施计划.md  BMP三智能体开发计划.md  安全防护文档.md  技术架构文档.md  数据库架构文档.md  阶段1实施指南.md
vue/: babel.config.js  package.json  tsconfig.json  vue.config.js
(+796 files in other folders)
