[project]
name = "bmp-agent"
version = "1.0.0"
description = "BMP Agent Service"
requires-python = "==3.12.13"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "langgraph==1.2.9",
    "langchain==1.3.14",
    "langchain-openai==1.3.5",
    "openai==2.46.0",
    "httpx==0.28.1",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.5",
    "sqlalchemy==2.0.51",
    "redis==8.0.1",
    "opentelemetry-api==1.44.0",
    "opentelemetry-sdk==1.44.0",
    "opentelemetry-instrumentation-fastapi==0.65b0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-socket==0.7.0",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-m=not live_llm",
    "--allow-hosts=127.0.0.1,::1",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"
markers = [
    "live_llm: calls a configured external OpenAI-compatible model",
    "enable_socket: allows network access for an explicitly selected test",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
